--- a/phire-ui/Cargo.toml
+++ b/phire-ui/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0-only"
 crate-type = ["lib", "cdylib"]
 
 [features]
+default = []
 closed = ["phire/closed"]
 chat = []
 aa = []
@@ -31,7 +32,7 @@ nalgebra = "*"
 once_cell = "*"
 openssl = { version = "*", features = ["vendored"] }
 pollster = "0.2.5"
-phire = { path = "../phire", features = ["log"] }
+phire = { path = "../phire" }
 rand = "0.8.5"
 regex = "1.7.0"
 reqwest = { version = "0.11", features = ["json", "stream", "gzip"] }
