--- a/phire/Cargo.toml
+++ b/phire/Cargo.toml
@@ -7,10 +7,11 @@ license = "GPL-3.0-only"
 [lib]
 
 [features]
-default = ["log", "play"]
+default = ["log", "play", "video"]
 closed = []
 log = ["dep:tracing-subscriber", "dep:colored"]
 play = []
+video = ["dep:prpr-avc"]
 
 [dependencies]
 chinese-number = "0.7.7"
@@ -64,7 +65,7 @@ color-thief = "0.2.2"
 tracing-subscriber = { version = "0.3.17", optional = true }
 colored = { version = "2.0.0", optional = true }
 
-prpr-avc = { path = "../prpr-avc" }
+prpr-avc = { path = "../prpr-avc", optional = true }
 lazy_static = "1.5.0"
 open = "5.3.2"
 
