chore: upgrade zip to 4.3.0

--- a/phire/Cargo.toml
+++ b/phire/Cargo.toml
@@ -48,7 +48,7 @@ sys-locale = "0.2.3"
 tempfile = "3.3.0"
 tracing = "0.1.37"
 unic-langid = { version = "0.9.1", features = ["macros"] }
-zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
+zip = { version = "4.3.0" }
 
 byteorder = "1.4.3"
 chrono = { version = "0.4.24", features = ["serde"] }
