--- a/phire/Cargo.toml
+++ b/phire/Cargo.toml
@@ -11,7 +11,7 @@ default = ["log", "play", "video"]
 closed = []
 log = ["dep:tracing-subscriber", "dep:colored"]
 play = []
-video = ["dep:prpr-avc"]
+video = ["dep:prpr-avc", "dep:ffmpeg-next", "dep:video-rs"]
 
 [dependencies]
 chinese-number = "0.7.7"
@@ -68,6 +68,9 @@ colored = { version = "2.0.0", optional = true }
 prpr-avc = { path = "../prpr-avc", optional = true }
 lazy_static = "1.5.0"
 open = "5.3.2"
+ffmpeg-next = { version = "^7.1.0", optional = true }
+video-rs = { version = "0.10.3", features = ["ndarray"], optional = true }
+ndarray = "0.16.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 rfd = { version = "0.15.3", default-features = false, features = ["gtk3"] }
